infrastructure/foundation/namespaces.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: sso
  labels:
    app.kubernetes.io/part-of: elektrokube-sso
---
apiVersion: v1
kind: Namespace
metadata:
  name: cert-manager
