infrastructure/foundation/network-policies.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: sso-heimdall
  namespace: sso
spec:
  endpointSelector:
    matchLabels:
      app: heimdall-authz
  ingress:
  - fromEntities:
    - ingress
    toPorts:
    - ports:
      - port: '4456'
        protocol: TCP
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: sso-oauth2
  namespace: sso
spec:
  endpointSelector:
    matchLabels:
      app: oauth2-proxy
  ingress:
  - fromEntities:
    - ingress
    toPorts:
    - ports:
      - port: '4180'
        protocol: TCP
  - fromEndpoints:
    - matchLabels:
        k8s:io.kubernetes.pod.namespace: sso
        app: heimdall-authz
    toPorts:
    - ports:
      - port: '4180'
        protocol: TCP
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: sso-openfga
  namespace: sso
spec:
  endpointSelector:
    matchLabels:
      app: openfga
  ingress:
  - fromEntities:
    - ingress
    toPorts:
    - ports:
      - port: '8080'
        protocol: TCP
  - fromEndpoints:
    - matchLabels:
        k8s:io.kubernetes.pod.namespace: sso
        app: heimdall-authz
    toPorts:
    - ports:
      - port: '8080'
        protocol: TCP
  - fromEndpoints:
    - matchLabels:
        k8s:io.kubernetes.pod.namespace: sso
        app: openfga-policy
    toPorts:
    - ports:
      - port: '8080'
        protocol: TCP
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: sso-authentik
  namespace: sso
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: authentik
      app.kubernetes.io/component: server
  ingress:
  - fromEntities:
    - ingress
    toPorts:
    - ports:
      - port: '9000'
        protocol: TCP
  - fromEndpoints:
    - matchLabels:
        k8s:io.kubernetes.pod.namespace: sso
        app.kubernetes.io/name: authentik
    toPorts:
    - ports:
      - port: '9000'
        protocol: TCP
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: sso-authentik-db
  namespace: sso
spec:
  endpointSelector:
    matchLabels:
      cnpg.io/cluster: authentik-db
  ingress:
  - fromEndpoints:
    - matchLabels:
        k8s:io.kubernetes.pod.namespace: sso
        app.kubernetes.io/name: authentik
    - matchLabels:
        k8s:io.kubernetes.pod.namespace: sso
        cnpg.io/cluster: authentik-db
    toPorts:
    - ports:
      - port: '5432'
        protocol: TCP
  - fromEndpoints:
    - matchLabels:
        k8s:io.kubernetes.pod.namespace: cnpg-system
    toPorts:
    - ports:
      - port: '8000'
        protocol: TCP
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: sso-openfga-db
  namespace: sso
spec:
  endpointSelector:
    matchLabels:
      cnpg.io/cluster: openfga-db
  ingress:
  - fromEndpoints:
    - matchLabels:
        k8s:io.kubernetes.pod.namespace: sso
        app: openfga
    - matchLabels:
        k8s:io.kubernetes.pod.namespace: sso
        cnpg.io/cluster: openfga-db
    toPorts:
    - ports:
      - port: '5432'
        protocol: TCP
  - fromEndpoints:
    - matchLabels:
        k8s:io.kubernetes.pod.namespace: cnpg-system
    toPorts:
    - ports:
      - port: '8000'
        protocol: TCP
